# terrasuite-helpdesk

./: pyproject.toml
desk/src/: main.js  telemetry.ts
desk/src/components/: ListViewBuilder.vue  SearchArticles.vue
desk/src/components/Settings/: Agents.vue  EmailAdd.vue
desk/src/components/command-palette/: CP.vue
desk/src/components/layouts/: Sidebar.vue
desk/src/components/ticket/: TicketMergeModal.vue  TicketSplitModal.vue
desk/src/pages/dashboard/: Dashboard.vue
desk/src/pages/knowledge-base/: Article.vue  Articles.vue  KnowledgeBaseAgent.vue
desk/src/pages/ticket/: MobileTicketAgent.vue  TicketAgent.vue  TicketNew.vue  data.ts
desk/src/stores/: auth.ts  config.ts  knowledgeBase.ts  notification.ts  user.ts
terrasuitehelpdesk/: hooks.py  modules.txt  patches.txt  search.py
terrasuitehelpdesk/api/: agent.py  article.py  auth.py  dashboard.py  doc.py  knowledge_base.py  session.py  ticket.py
terrasuitehelpdesk/helpdesk/doctype/hd_article/: hd_article.py
terrasuitehelpdesk/helpdesk/doctype/hd_escalation_rule/: hd_escalation_rule.py
terrasuitehelpdesk/helpdesk/doctype/hd_service_holiday_list/: hd_service_holiday_list_calendar.js
terrasuitehelpdesk/mixins/: mentions.py
terrasuitehelpdesk/patches/: agent_manager_perms.py  default_article_category.py  naming_autoincrement.py
terrasuitehelpdesk/public/desk/: sw.js  sw.js.map
terrasuitehelpdesk/setup/: default_template.py  install.py  ticket_type.py
terrasuitehelpdesk/templates/: kb_base_template.html
terrasuitehelpdesk/www/helpdesk/: index.html
(+158 files in other folders)
