[project]
name = "terrasuite_helpdesk"
authors = [
    { name = "Terrasuite Pvt Ltd", email = "saifulloh.fadli@calterras.com"}
]
description = "Customer Service Software"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "textblob==0.18.0.post0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "helpdesk"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"
